Updated date column value calculation for amortization schedule

--- a/MC_030819/PAGES/amortizationTable.html
+++ b/MC_030819/PAGES/amortizationTable.html
@@ -82,11 +82,11 @@
             </table>
         </section>
            
-      </main>                                                                   
-                                  
-     <br />                    
-     <p>Questions? <a href="mailto:sofiasd@yahoo.com">Email us</a> for help.</p>
-     <p>Copyright &copy;2018 My Simple Mortgage Calculator.</p>
+      </main>
+     <footer>
+     	<p>Questions? <a href="mailto:sofiasd@yahoo.com">Email us</a> for help.</p>
+     	<p>Copyright &copy;2018 My Simple Mortgage Calculator.</p>
+     </footer>
   </section>     
       <script src="../SCRIPTS/amortSched.js"></script> 
   </body>
