--- a/MC_030819/PAGES/amortizationTable.html
+++ b/MC_030819/PAGES/amortizationTable.html
@@ -35,7 +35,7 @@
                 <li><a href="../index.html">Calculator</a></li>
                 <li><a href="amortizationTable.html">Schedule
                 </a></li>  
-                <li><a href="about.html">Terms</a></li>
+                <li><a href="terms.html">Terms</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 
             </ul>
