Updated css for RWD,  modified navigation and added HTML5 form validation

--- a/MC_030819/PAGES/contact.html
+++ b/MC_030819/PAGES/contact.html
@@ -35,7 +35,7 @@
                 <li><a href="amortizationTable.html">Schedule
                 </a></li>  
                 <li><a href="terms.html">Terms</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
                 
             </ul>
          </nav>
@@ -56,8 +56,8 @@
 
      </main>
      <footer>
-     	<p>Questions? <a href="mailto:sofiasd@yahoo.com">Email us</a> for help.</p>
-     	<p>Copyright &copy;2018 My Simple Mortgage Calculator.</p>
+     	<!--<p>Questions? <a href="mailto:sofiasd@yahoo.com">Email us</a> for help.</p>-->
+     	<p>Copyright &copy;2019 My Simple Mortgage Calculator.</p>
      </footer>
   </section>     
       <script src="../SCRIPTS/amortSched.js"></script> 
