--- a/MC_030819/PAGES/terms.html
+++ b/MC_030819/PAGES/terms.html
@@ -48,7 +48,7 @@
 
 </head>
   <body>
-  <section class="container">
+  <div class="container">
   	 <header>
         <figure>
               <img src="../IMAGES/image_hand.jpg" alt="mortgage calculator">
@@ -64,7 +64,7 @@
                 <li><a href="../index.html">Calculator</a></li>
                 <li><a href="amortizationTable.html">Schedule
                 </a></li>
-                <li><a href="terms.html">Terms</a></li>
+                <li class="active"><a href="terms.html">Terms</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
          </nav>
@@ -76,7 +76,10 @@
          <h1>Mortgage Loan Calculator</h1>
          <h2>A B O U T</h2>
 
-		 <p>This tool allows you to calculate your monthly home loan payments, using various loan terms, interest rates, and loan amounts. It includes advanced features like amortization tables and the ability to calculate a loan including property taxes, homeowners insurance &amp; property mortgage insurance.</p>
+		<!-- <p>This tool allows you to calculate your monthly home loan payments, using various loan terms, interest rates, and loan amounts. It includes advanced features like amortization tables and the ability to calculate a loan including property taxes, homeowners insurance &amp; property mortgage insurance.</p>-->
+
+        <p>This tool allows you to calculate your monthly home loan payments, using various loan terms, interest rates, and loan amounts. It includes advanced feature like calculating amortization achedule.</p>
+
 
          <h2>T E R M I N A L O G Y</h2>
 
@@ -120,15 +123,15 @@
                <p>The Home Equity - the difference between the value of the home and the mortgage loan is called equity. Over time, as the value of the home increases and the amount of the loan decreases, the equity of the home generally increases./p>
            </li>
          </ul>
-		 <p>
+		<!-- <p>
 		 	<a href="http://www.businessdictionary.com/definition/loan-term.html" target="_blank">Learn More</a>
-		 </p>
+		 </p>-->
     </main>
     <footer>
-     	 <p>Questions? <a href="mailto:sofiasd@yahoo.com">Email us</a> for help.</p>
-     	 <p>Copyright &copy; 2018 My Simple Mortgage Calculator.</p>
+     	<!-- <p>Questions? <a href="mailto:sofiasd@yahoo.com">Email us</a> for help.</p>-->
+     	 <p>Copyright &copy; 2019 My Simple Mortgage Calculator.</p>
      </footer>
-  </section>
+  </div>
       <script src="../SCRIPTS/amortSched.js"></script>
   </body>
 
