updated accordion style on terms page

--- a/MC_030819/PAGES/terms.html
+++ b/MC_030819/PAGES/terms.html
@@ -120,7 +120,7 @@
 			 </li>
              <li>
                <h3>What is a Home Equity</h3>
-               <p>The Home Equity - the difference between the value of the home and the mortgage loan is called equity. Over time, as the value of the home increases and the amount of the loan decreases, the equity of the home generally increases./p>
+               <p>The Home Equity - the difference between the value of the home and the mortgage loan is called equity. Over time, as the value of the home increases and the amount of the loan decreases, the equity of the home generally increases.</p>
            </li>
          </ul>
 		<!-- <p>
