--- a/MC_030819/PAGES/terms.html
+++ b/MC_030819/PAGES/terms.html
@@ -87,7 +87,7 @@
 
            <li>
 			   <h3>What is a Mortgage Loan Calculator</h3>
-               <p>Apply this to - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque illo incidunt earum sunt sint excepturi consectetur impedit dolorum iste est vel nesciunt, nobis quae laborum, rem facilis hic. Tenetur, rem!</p>
+               <p>The mortgage calculator is used to estimate your monthly mortgage payment. You can input a different home price, down payment, loan term and interest rate to see how your monthly payment changes!</p>
            </li>
            <li>
                <h3>What is an Amortization Schedule</h3>
