Fixed ytd balance on amortization schedule and spelling error for 'schedule'.

--- a/MC_030819/PAGES/terms.html
+++ b/MC_030819/PAGES/terms.html
@@ -78,7 +78,7 @@
 
 		<!-- <p>This tool allows you to calculate your monthly home loan payments, using various loan terms, interest rates, and loan amounts. It includes advanced features like amortization tables and the ability to calculate a loan including property taxes, homeowners insurance &amp; property mortgage insurance.</p>-->
 
-        <p>This tool allows you to calculate your monthly home loan payments, using various loan terms, interest rates, and loan amounts. It includes advanced feature like calculating amortization achedule.</p>
+        <p>This tool allows you to calculate your monthly home loan payments, using various loan terms, interest rates, and loan amounts. It includes advanced feature like calculating amortization schedule.</p>
 
 
          <h2>T E R M I N A L O G Y</h2>
