Updated footer dynamic copyright year update

--- a/MC_030819/PAGES/contact.html
+++ b/MC_030819/PAGES/contact.html
@@ -95,7 +95,7 @@
      </main>
      <footer>
      	<!--<p>Questions? <a href="mailto:sofiasd@yahoo.com">Email us</a> for help.</p>-->
-     	<p>Copyright &copy;2019 My Simple Mortgage Calculator.</p>
+     	<p>My Simple Mortgage Calculator &copy; Copyright <script type="text/javascript">document.write(new Date().getFullYear())</script> </p>
      </footer>
   </div>
 
