--- a/MC_030819/index.html
+++ b/MC_030819/index.html
@@ -88,7 +88,7 @@
 
      <footer>
        <!--  <p>Questions? <a href="mailto:sofiasd@yahoo.com">Email us</a> for help.</p>-->
-         <p>Copyright &copy;<?php echo date("Y"); ?> My Simple Mortgage Calculator.</p>
+         <p>My Simple Mortgage Calculator &copy; Copyright <script type="text/javascript">document.write(new Date().getFullYear())</script> </p>
      </footer>
 
      </section> <!-- end of container -->
