added print.css and print button

--- a/MC_030819/PAGES/terms.html
+++ b/MC_030819/PAGES/terms.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../CSS/normalize.css">
     <link rel="stylesheet" href="../CSS/main.css" type="text/css">
      <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="../CSS/print.css" type="text/css" media="print">
 	<!-- Style -->
     <title>jQuery Accordion</title>
 
@@ -81,7 +82,7 @@
         <p>This tool allows you to calculate your monthly home loan payments, using various loan terms, interest rates, and loan amounts. It includes advanced feature like calculating amortization schedule.</p>
 
 
-         <h2>T E R M I N A L O G Y</h2>
+         <h2>T E R M I N A L O G Y <a class="prtBtn" href="javascript:window.print()" title="Print this page"><i class="icon ion-md-print"></i></a></h2>
 
          <ul class="accordion">
 
