--- a/MC_030819/index.html
+++ b/MC_030819/index.html
@@ -12,6 +12,7 @@
     <!-- Normalize.css makes browsers render all elements more consistently -->
     <link rel="stylesheet" href="CSS/normalize.css" type="text/css">
     <link rel="stylesheet" href="CSS/main.css" type="text/css">
+    <link rel="stylesheet" href="CSS/print.css" type="text/css" media="print">
 
     <!-- JS at the bottom -->
 </head>
