--- a/MC_030819/PAGES/contact.html
+++ b/MC_030819/PAGES/contact.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../CSS/normalize.css">   
     <link rel="stylesheet" href="../CSS/main.css" type="text/css">
     <link rel="stylesheet" href="../CSS/print.css" type="text/css" media="print">
+    <link rel="shortcut icon" href="../favicon.ico">"
     
     <!-- JS -->
     
