--- a/MC_030819/PAGES/amortizationTable.html
+++ b/MC_030819/PAGES/amortizationTable.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../CSS/main.css" type="text/css">
     <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/print.css" type="text/css" media="print">
+    <link rel="shortcut icon" href="../favicon.ico">"
     
     <!-- JS -->
     
