--- a/MC_030819/index.html
+++ b/MC_030819/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="CSS/normalize.css" type="text/css">
     <link rel="stylesheet" href="CSS/main.css" type="text/css">
     <link rel="stylesheet" href="CSS/print.css" type="text/css" media="print">
+    <link rel="shortcut icon" href="favicon.ico">"
+
 
     <!-- JS at the bottom -->
 </head>
